// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 0] 1`] = `
Object {
  "ID": 0,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x63da4DB6Ef4e7C62168aB03982399F9588fCd198",
  "noTriRewards": false,
  "poolId": 0,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0xC9BdeEd33CD01541e1eeD10f90519d2C06Fe3feB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Wrapped ETH",
      "symbol": "ETH",
    },
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 1] 1`] = `
Object {
  "ID": 1,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x20F8AeFB5697B77E0BB835A8518BE70775cdA1b0",
  "noTriRewards": false,
  "poolId": 1,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0xB12BFcA5A55806AaF64E99521918A4bf0fC40802",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "USD Coin",
      "symbol": "USDC",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 2] 1`] = `
Object {
  "ID": 2,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x03B666f3488a7992b2385B12dF7f35156d7b29cD",
  "noTriRewards": false,
  "poolId": 2,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x4988a896b1227218e4A686fdE5EabdcAbd91571f",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "Tether USD",
      "symbol": "USDT",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 3] 1`] = `
Object {
  "ID": 3,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x2fe064B6c7D274082aa5d2624709bC9AE7D16C77",
  "noTriRewards": false,
  "poolId": 3,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0x4988a896b1227218e4A686fdE5EabdcAbd91571f",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "Tether USD",
      "symbol": "USDT",
    },
    Token {
      "address": "0xB12BFcA5A55806AaF64E99521918A4bf0fC40802",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "USD Coin",
      "symbol": "USDC",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 4] 1`] = `
Object {
  "ID": 4,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xbc8A244e8fb683ec1Fd6f88F3cc6E565082174Eb",
  "noTriRewards": false,
  "poolId": 4,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0xF4eB217Ba2454613b15dBdea6e5f22276410e89e",
      "chainId": 1313161554,
      "decimals": 8,
      "name": "Wrapped Bitcoin",
      "symbol": "WBTC",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 5] 1`] = `
Object {
  "ID": 5,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x84b123875F0F36B966d0B6Ca14b31121bd9676AD",
  "noTriRewards": false,
  "poolId": 5,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0xFa94348467f64D5A457F75F8bc40495D33c65aBB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Trisolaris Token",
      "symbol": "TRI",
    },
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 6] 1`] = `
Object {
  "ID": 6,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x5eeC60F348cB1D661E4A5122CF4638c7DB7A886e",
  "noTriRewards": false,
  "poolId": 6,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x1f1Ed214bef5E83D8f5d0eB5D7011EB965D0D79B",
  "tokens": Array [
    Token {
      "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Aurora",
      "symbol": "AURORA",
    },
    Token {
      "address": "0xC9BdeEd33CD01541e1eeD10f90519d2C06Fe3feB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Wrapped ETH",
      "symbol": "ETH",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 7] 1`] = `
Object {
  "ID": 7,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Aurora",
    "symbol": "AURORA",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x5eeC60F348cB1D661E4A5122CF4638c7DB7A886e",
  "noTriRewards": false,
  "poolId": 0,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x94669d7a170bfe62FAc297061663e0B48C63B9B5",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Aurora",
      "symbol": "AURORA",
    },
    Token {
      "address": "0xC9BdeEd33CD01541e1eeD10f90519d2C06Fe3feB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Wrapped ETH",
      "symbol": "ETH",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 8] 1`] = `
Object {
  "ID": 8,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Aurora",
    "symbol": "AURORA",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xd1654a7713617d41A8C9530Fb9B948d00e162194",
  "noTriRewards": false,
  "poolId": 1,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x78EdEeFdF8c3ad827228d07018578E89Cf159Df1",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xFa94348467f64D5A457F75F8bc40495D33c65aBB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Trisolaris Token",
      "symbol": "TRI",
    },
    Token {
      "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Aurora",
      "symbol": "AURORA",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 9] 1`] = `
Object {
  "ID": 9,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xC4bdd27c33ec7daa6fcfd8532ddB524Bf4038096",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Wrapped LUNA",
    "symbol": "atLUNA",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xdF8CbF89ad9b7dAFdd3e37acEc539eEcC8c47914",
  "noTriRewards": false,
  "poolId": 2,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x89F6628927fdFA2592E016Ba5B14389a4b08D681",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0xC4bdd27c33ec7daa6fcfd8532ddB524Bf4038096",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Wrapped LUNA",
      "symbol": "atLUNA",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 10] 1`] = `
Object {
  "ID": 10,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xC4bdd27c33ec7daa6fcfd8532ddB524Bf4038096",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Wrapped LUNA",
    "symbol": "atLUNA",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xa9eded3E339b9cd92bB6DEF5c5379d678131fF90",
  "noTriRewards": false,
  "poolId": 3,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x17d1597ec86fD6aecbfE0F32Ab2F2aD9c37E6750",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x5ce9F0B6AFb36135b5ddBF11705cEB65E634A9dC",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Wrapped UST",
      "symbol": "atUST",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 11] 1`] = `
Object {
  "ID": 11,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x61C9E05d1Cdb1b70856c7a2c53fA9c220830633c",
  "noTriRewards": false,
  "poolId": 4,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xFa94348467f64D5A457F75F8bc40495D33c65aBB",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Trisolaris Token",
      "symbol": "TRI",
    },
    Token {
      "address": "0x4988a896b1227218e4A686fdE5EabdcAbd91571f",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "Tether USD",
      "symbol": "USDT",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 12] 1`] = `
Object {
  "ID": 12,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x6443532841a5279cb04420E61Cf855cBEb70dc8C",
  "noTriRewards": false,
  "poolId": 5,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x80A16016cC4A2E6a2CACA8a4a498b1699fF0f844",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Avalanche",
      "symbol": "AVAX",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 13] 1`] = `
Object {
  "ID": 13,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x7be4a49AA41B34db70e539d4Ae43c7fBDf839DfA",
  "noTriRewards": false,
  "poolId": 6,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x2bF9b864cdc97b08B6D79ad4663e71B8aB65c45c",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Binance Coin",
      "symbol": "BNB",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 14] 1`] = `
Object {
  "ID": 14,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x3dC236Ea01459F57EFc737A12BA3Bb5F3BFfD071",
  "noTriRewards": false,
  "poolId": 7,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x6aB6d61428fde76768D7b45D8BFeec19c6eF91A8",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Polygon",
      "symbol": "MATIC",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 15] 1`] = `
Object {
  "ID": 15,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xea62791aa682d455614eaA2A12Ba3d9A2fD197af",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Flux Token",
    "symbol": "FLX",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x48887cEEA1b8AD328d5254BeF774Be91B90FaA09",
  "noTriRewards": false,
  "poolId": 8,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x42b950FB4dd822ef04C4388450726EFbF1C3CF63",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0xea62791aa682d455614eaA2A12Ba3d9A2fD197af",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Flux Token",
      "symbol": "FLX",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 16] 1`] = `
Object {
  "ID": 16,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xa33C3B53694419824722C10D99ad7cB16Ea62754",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Mecha",
    "symbol": "MECHA",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xd62f9ec4C4d323A0C111d5e78b77eA33A2AA862f",
  "noTriRewards": true,
  "poolId": 9,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x9847F7e33CCbC0542b05d15c5cf3aE2Ae092C057",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0xa33C3B53694419824722C10D99ad7cB16Ea62754",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Mecha",
      "symbol": "MECHA",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 17] 1`] = `
Object {
  "ID": 17,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x501acE9c35E60f03A2af4d484f49F9B1EFde9f40",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Solace Token",
    "symbol": "SOLACE",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xdDAdf88b007B95fEb42DDbd110034C9a8e9746F2",
  "noTriRewards": true,
  "poolId": 10,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0xbbE41F699B0fB747cd4bA21067F6b27e0698Bc30",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x501acE9c35E60f03A2af4d484f49F9B1EFde9f40",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Solace Token",
      "symbol": "SOLACE",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 18] 1`] = `
Object {
  "ID": 18,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xc21Ff01229e982d7c8b8691163B0A3Cb8F357453",
    "chainId": 1313161554,
    "decimals": 24,
    "name": "Meta Pool",
    "symbol": "META",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x5913f644A10d98c79F2e0b609988640187256373",
  "noTriRewards": false,
  "poolId": 11,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x7B9e31BbEdbfdc99e3CC8b879b9a3B1e379Ce530",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0x802119e4e253D5C19aA06A5d567C5a41596D6803",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "xTRI",
      "symbol": "xTRI",
    },
    Token {
      "address": "0x07F9F7f963C5cD2BBFFd30CcfB964Be114332E30",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "Staked NEAR",
      "symbol": "stNEAR",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 19] 1`] = `
Object {
  "ID": 19,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xc21Ff01229e982d7c8b8691163B0A3Cb8F357453",
    "chainId": 1313161554,
    "decimals": 24,
    "name": "Meta Pool",
    "symbol": "META",
  },
  "doubleRewards": true,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x47924Ae4968832984F4091EEC537dfF5c38948a4",
  "noTriRewards": false,
  "poolId": 12,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0xf267212F1D8888e0eD20BbB0c7C87A089cDe6E88",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x07F9F7f963C5cD2BBFFd30CcfB964Be114332E30",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "Staked NEAR",
      "symbol": "stNEAR",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 20] 1`] = `
Object {
  "ID": 20,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x7cA1C28663b76CFDe424A9494555B94846205585",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Chronicle",
    "symbol": "XNL",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xb419ff9221039Bdca7bb92A131DD9CF7DEb9b8e5",
  "noTriRewards": true,
  "poolId": 13,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0xb84293D04137c9061afe34118Dac9931df153826",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0x8BEc47865aDe3B172A928df8f990Bc7f2A3b9f79",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Aurora",
      "symbol": "AURORA",
    },
    Token {
      "address": "0x7cA1C28663b76CFDe424A9494555B94846205585",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Chronicle",
      "symbol": "XNL",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 21] 1`] = `
Object {
  "ID": 21,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x7cA1C28663b76CFDe424A9494555B94846205585",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Chronicle",
    "symbol": "XNL",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xFBc4C42159A5575a772BebA7E3BF91DB508E127a",
  "noTriRewards": true,
  "poolId": 14,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0x028Fbc4BB5787e340524EF41d95875Ac2C382101",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0xC42C30aC6Cc15faC9bD938618BcaA1a1FaE8501d",
      "chainId": 1313161554,
      "decimals": 24,
      "name": "WNEAR Token",
      "symbol": "wNEAR",
    },
    Token {
      "address": "0x7cA1C28663b76CFDe424A9494555B94846205585",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Chronicle",
      "symbol": "XNL",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Aurora Pools: Aurora Pool [ID: 22] 1`] = `
Object {
  "ID": 22,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 1,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0xc2ac78FFdDf39e5cD6D83bbD70c1D67517C467eF",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "Golden Banana",
    "symbol": "GBA",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x7B273238C6DD0453C160f305df35c350a123E505",
  "noTriRewards": true,
  "poolId": 15,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "0xDAc58A615E2A1a94D7fb726a96C273c057997D50",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x3838956710bcc9D122Dd23863a0549ca8D5675D6",
  "tokens": Array [
    Token {
      "address": "0x4988a896b1227218e4A686fdE5EabdcAbd91571f",
      "chainId": 1313161554,
      "decimals": 6,
      "name": "Tether USD",
      "symbol": "USDT",
    },
    Token {
      "address": "0xc2ac78FFdDf39e5cD6D83bbD70c1D67517C467eF",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "Golden Banana",
      "symbol": "GBA",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Polygon Pools: Polygon Pool [ID: 0] 1`] = `
Object {
  "ID": 0,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0xd6f922f6eB4dfa47f53C038c7dE9bE614a49257f",
  "noTriRewards": false,
  "poolId": 0,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x43A1dD21a5237C6F5eEC94747C28aa3f5C8fa1c7",
  "tokens": Array [
    Token {
      "address": "0x8f3Cf7ad23Cd3CaDbD9735AFf958023239c6A063",
      "chainId": 137,
      "decimals": 18,
      "name": "Dai Stablecoin",
      "symbol": "DAI",
    },
    Token {
      "address": "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
      "chainId": 137,
      "decimals": 6,
      "name": "USD Coin",
      "symbol": "USDC",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;

exports[`stake-constants.ts Polygon Pools: Polygon Pool [ID: 1] 1`] = `
Object {
  "ID": 1,
  "allocPoint": 1,
  "apr": 0,
  "apr2": 0,
  "chefVersion": 0,
  "doubleRewardAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "doubleRewardToken": Token {
    "address": "0x0000000000000000000000000000000000000000",
    "chainId": 1313161554,
    "decimals": 18,
    "name": "ZERO",
    "symbol": "ZERO",
  },
  "doubleRewards": false,
  "earnedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "inStaging": false,
  "isPeriodFinished": false,
  "lpAddress": "0x76F4128B11f429289499BA29518Ef7E5b26025B6",
  "noTriRewards": false,
  "poolId": 1,
  "rewardRate": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "rewarderAddress": "",
  "stakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "stakingRewardAddress": "0x43A1dD21a5237C6F5eEC94747C28aa3f5C8fa1c7",
  "tokens": Array [
    Token {
      "address": "0xD6DF932A45C0f255f85145f286eA0b292B21C90B",
      "chainId": 137,
      "decimals": 18,
      "name": "AAVE Token",
      "symbol": "AAVE",
    },
    Token {
      "address": "0x8f3Cf7ad23Cd3CaDbD9735AFf958023239c6A063",
      "chainId": 137,
      "decimals": 18,
      "name": "Dai Stablecoin",
      "symbol": "DAI",
    },
  ],
  "totalRewardRate": 1,
  "totalStakedAmount": TokenAmount {
    "currency": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
    "denominator": JSBI [
      660865024,
      931322574,
    ],
    "numerator": JSBI [],
    "token": Token {
      "address": "0x0000000000000000000000000000000000000000",
      "chainId": 1313161554,
      "decimals": 18,
      "name": "ZERO",
      "symbol": "ZERO",
    },
  },
  "totalStakedInUSD": 0,
}
`;
